Refactorings to improve code around gem hitting grid sound after freefall, and decoupling WonderDroppingGem add-to-grid method (which returns a list of ids to be removed) from parent class, which now returns the number of dropping gems added.